--- a/PhotoPicker/MainWindow.xaml
+++ b/PhotoPicker/MainWindow.xaml
@@ -3,7 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:PhotoPicker" x:Class="PhotoPicker.MainWindow"
         xmlns:commands="clr-namespace:PhotoPicker.Commands"
-        Title="MainWindow" Height="600" Width="800" FontFamily="Microsoft YaHei">
+        Title="MainWindow" Height="600" Width="800" FontFamily="Microsoft YaHei"
+        Icon="Resource/0_open.png">
 
     <Window.DataContext>
         <local:MainViewModel/>
