--- a/PhotoPicker/HelpWindow.xaml
+++ b/PhotoPicker/HelpWindow.xaml
@@ -1,7 +1,8 @@
 ﻿<Window x:Class="PhotoPicker.HelpWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="HelpWindow" Height="750" Width="600" FontFamily="Microsoft YaHei-X"
+        Title="HelpWindow" Height="750" Width="600"
+        FontFamily="Microsoft YaHei-X"
         Icon="Resource/help.png">
     <Grid>
         <Grid.RowDefinitions>
