SendToRecycleBin settings added

--- a/PhotoPicker/Settings.xaml
+++ b/PhotoPicker/Settings.xaml
@@ -9,6 +9,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="28" />
         </Grid.RowDefinitions>
@@ -20,8 +21,10 @@
         <Label Grid.Row="0" Grid.Column="0" Content="Move deleted file to:"/>
         <TextBox Grid.Row="0" Grid.Column="1" Margin="3" x:Name="deleteDestinationTextBox"/>
 
-        <Button Grid.Row="3" Grid.Column="1" HorizontalAlignment="Right" MinWidth="80" Margin="3,3,180,3" Content="OK" Click="OK_Clicked"/>
-        <Button Grid.Row="3" Grid.Column="1" HorizontalAlignment="Right" MinWidth="80" Margin="3,3,90,3" Content="Default" Click="Default_Clicked"/>
-        <Button Grid.Row="3" Grid.Column="1" HorizontalAlignment="Right" MinWidth="80" Margin="3" Content="Cancel" Click="Cancel_Clicked"/>
+        <CheckBox Grid.Row="1" Grid.Column="1" Margin="3" HorizontalAlignment="Left" VerticalAlignment="Center" Content="Send to recycle bin" x:Name="sendToRecycleBinCheckBox" Click="sendToRecycleBinCheckBox_Clicked"/>
+
+        <Button Grid.Row="4" Grid.Column="1" HorizontalAlignment="Right" MinWidth="80" Margin="3,3,180,3" Content="OK" Click="OK_Clicked"/>
+        <Button Grid.Row="4" Grid.Column="1" HorizontalAlignment="Right" MinWidth="80" Margin="3,3,90,3" Content="Default" Click="Default_Clicked"/>
+        <Button Grid.Row="4" Grid.Column="1" HorizontalAlignment="Right" MinWidth="80" Margin="3" Content="Cancel" Click="Cancel_Clicked"/>
     </Grid>
 </Window>
