--- a/PhotoPicker/HelpWindow.xaml
+++ b/PhotoPicker/HelpWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="HelpWindow" Height="750" Width="600"
-        FontFamily="Microsoft YaHei-X"
+        FontFamily="Microsoft YaHei"
         Icon="Resource/help.png">
     <Grid>
         <Grid.RowDefinitions>
