--- a/PhotoPicker/Settings.xaml
+++ b/PhotoPicker/Settings.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Settings" Height="200" Width="500"
         WindowStartupLocation="CenterOwner"
-        FontFamily="Microsoft YaHei-X"
+        FontFamily="Microsoft YaHei"
         Icon="Resource/settings.png" Initialized="onInitialized">
     <Grid>
         <Grid.RowDefinitions>
