--- a/PhotoPicker/MainWindow.xaml
+++ b/PhotoPicker/MainWindow.xaml
@@ -1,6 +1,8 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:Behaviors="clr-namespace:GradientDemo.Behaviors"
         xmlns:zb="clr-namespace:ZoomBoxLibrary"
         xmlns:local="clr-namespace:PhotoPicker" x:Class="PhotoPicker.MainWindow"
         xmlns:commands="clr-namespace:PhotoPicker.Commands"
@@ -40,61 +42,94 @@
         <KeyBinding Command="Help" Key="H"/>
     </Window.InputBindings>
 
+    <Window.Resources>
+        <LinearGradientBrush x:Key="ProgressBarForeground" EndPoint="0.0,0.5" StartPoint="1.0,0.5">
+            <GradientStop Color="#FFB2D60F" Offset="0.9"/>
+            <GradientStop Color="#FF47C10D" Offset="0.5"/>
+            <GradientStop Color="#FF3F8F11" Offset="0.1"/>
+
+            <!--<GradientStop Color="#FF0000" Offset="1"/>
+            <GradientStop Color="#E9AF10" Offset="0.5"/>
+            <GradientStop Color="#007F0E" Offset="0"/>-->
+        </LinearGradientBrush>
+        <LinearGradientBrush x:Key="ProgressBarBackground" EndPoint="1,0" StartPoint="0,0">
+            <GradientStop Color="#FFBABABA" Offset="0"/>
+            <GradientStop Color="#FFC7C7C7" Offset="0.5"/>
+            <GradientStop Color="#00BABABA" Offset="1"/>
+        </LinearGradientBrush>
+    </Window.Resources>
+
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="5"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="5"/>
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="58"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="80"/>
+            <RowDefinition Height="6"/>
         </Grid.RowDefinitions>
 
-        <Button ToolTip="Open ..." Grid.Column="1" HorizontalAlignment="Left" Margin="0,5,5,5" Grid.Row="0" Width="48" Command="{x:Static commands:AppCommands.OpenFileCommand}">
-            <Image Source="Resource\open.png"/>
-        </Button>
-        <Button ToolTip="Previous" Grid.Column="1" HorizontalAlignment="Left" Margin="50,5,5,5" Grid.Row="0" Width="48" Command="{x:Static commands:AppCommands.PreviousCommand}">
-            <Image Source="Resource\prev.png"/>
-        </Button>
-        <Button ToolTip="Next" Grid.Column="1" HorizontalAlignment="Left" Margin="100,5,5,5" Grid.Row="0" Width="48" Command="{x:Static commands:AppCommands.NextCommand}">
-            <Image Source="Resource\next.png"/>
-        </Button>
-        <Button ToolTip="Delete Left" Grid.Column="1" HorizontalAlignment="Left" Margin="150,5,5,5" Grid.Row="0" Width="48" Command="{x:Static commands:AppCommands.DeleteLeftCommand}">
-            <Image Source="Resource\delete_left.png"/>
-        </Button>
-        <Button ToolTip="Delete Right" Grid.Column="1" HorizontalAlignment="Left" Margin="200,5,5,5" Grid.Row="0" Width="48" Command="{x:Static commands:AppCommands.DeleteRightCommand}">
-            <Image Source="Resource\delete_right.png"/>
-        </Button>
-        <Button ToolTip="Fit Page" Grid.Column="2" HorizontalAlignment="Left" Margin="5,5,5,5" Grid.Row="0" Width="48" Command="{x:Static commands:AppCommands.FitPageCommand}">
-            <Image Source="Resource\fit_page.png"/>
-        </Button>
-        <Button ToolTip="Actual Size" Grid.Column="2" HorizontalAlignment="Left" Margin="55,5,5,5" Grid.Row="0" Width="48" Command="{x:Static commands:AppCommands.ActualSizeCommand}">
-            <Image Source="Resource\actual_size.png"/>
-        </Button>
-        <Button ToolTip="Settings ..." Grid.Column="2" HorizontalAlignment="Right" Margin="5,5,50,5" Grid.Row="0" Width="48" Command="{x:Static commands:AppCommands.SettingsCommand}">
-            <Image Source="Resource\settings.png"/>
-        </Button>
-        <Button ToolTip="Help ..." Grid.Column="2" HorizontalAlignment="Right" Margin="5,5,0,5" Grid.Row="0" Width="48" Command="Help">
-            <Image Source="Resource\help.png"/>
-        </Button>
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="5"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="5"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="58"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="80"/>
+            </Grid.RowDefinitions>
 
-        <Image Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" Margin="2,2,2,2" Source="{Binding PreviousImageSource}" VerticalAlignment="Center" Visibility="Hidden"/>
-        <zb:ZoomBoxPanel Margin="2,2,2,2" ZoomMode="FitPage" x:Name="zoomBox0" Grid.Row="1" Grid.Column="1" MinZoom="0.01" MaxZoom="10000" MouseMode="Pan" WheelMode="Zoom">
-            <Image Source="{Binding ImageSource0}"/>
-        </zb:ZoomBoxPanel>
-        <zb:ZoomBoxPanel Margin="2,2,2,2" ZoomMode="FitPage" x:Name="zoomBox1" Grid.Row="1" Grid.Column="2" MinZoom="0.01" MaxZoom="10000" MouseMode="Pan" WheelMode="Zoom">
-            <Image Source="{Binding ImageSource1}"/>
-        </zb:ZoomBoxPanel>
-        <Image Grid.Row="1" Grid.Column="2" HorizontalAlignment="Center" Margin="2,2,2,2" Source="{Binding NextImageSource}" VerticalAlignment="Center" Visibility="Hidden"/>
+            <Button ToolTip="Open ..." Grid.Column="1" HorizontalAlignment="Left" Margin="0,5,5,5" Grid.Row="0" Width="48" Command="{x:Static commands:AppCommands.OpenFileCommand}">
+                <Image Source="Resource\open.png"/>
+            </Button>
+            <Button ToolTip="Previous" Grid.Column="1" HorizontalAlignment="Left" Margin="50,5,5,5" Grid.Row="0" Width="48" Command="{x:Static commands:AppCommands.PreviousCommand}">
+                <Image Source="Resource\prev.png"/>
+            </Button>
+            <Button ToolTip="Next" Grid.Column="1" HorizontalAlignment="Left" Margin="100,5,5,5" Grid.Row="0" Width="48" Command="{x:Static commands:AppCommands.NextCommand}">
+                <Image Source="Resource\next.png"/>
+            </Button>
+            <Button ToolTip="Delete Left" Grid.Column="1" HorizontalAlignment="Left" Margin="150,5,5,5" Grid.Row="0" Width="48" Command="{x:Static commands:AppCommands.DeleteLeftCommand}">
+                <Image Source="Resource\delete_left.png"/>
+            </Button>
+            <Button ToolTip="Delete Right" Grid.Column="1" HorizontalAlignment="Left" Margin="200,5,5,5" Grid.Row="0" Width="48" Command="{x:Static commands:AppCommands.DeleteRightCommand}">
+                <Image Source="Resource\delete_right.png"/>
+            </Button>
+            <Button ToolTip="Fit Page" Grid.Column="2" HorizontalAlignment="Left" Margin="5,5,5,5" Grid.Row="0" Width="48" Command="{x:Static commands:AppCommands.FitPageCommand}">
+                <Image Source="Resource\fit_page.png"/>
+            </Button>
+            <Button ToolTip="Actual Size" Grid.Column="2" HorizontalAlignment="Left" Margin="55,5,5,5" Grid.Row="0" Width="48" Command="{x:Static commands:AppCommands.ActualSizeCommand}">
+                <Image Source="Resource\actual_size.png"/>
+            </Button>
+            <Button ToolTip="Settings ..." Grid.Column="2" HorizontalAlignment="Right" Margin="5,5,50,5" Grid.Row="0" Width="48" Command="{x:Static commands:AppCommands.SettingsCommand}">
+                <Image Source="Resource\settings.png"/>
+            </Button>
+            <Button ToolTip="Help ..." Grid.Column="2" HorizontalAlignment="Right" Margin="5,5,0,5" Grid.Row="0" Width="48" Command="Help">
+                <Image Source="Resource\help.png"/>
+            </Button>
 
-        <Label Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <TextBlock Text="{Binding ImageInfo0}"/>
-        </Label>
-        <Label Grid.Row="2" Grid.Column="2" HorizontalAlignment="Left"  VerticalAlignment="Center">
-            <TextBlock Text="{Binding ImageInfo1}"/>
-        </Label>
+            <Image Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" Margin="2,2,2,2" Source="{Binding PreviousImageSource}" VerticalAlignment="Center" Visibility="Hidden"/>
+            <zb:ZoomBoxPanel Margin="2,2,2,2" ZoomMode="FitPage" x:Name="zoomBox0" Grid.Row="1" Grid.Column="1" MinZoom="0.01" MaxZoom="10000" MouseMode="Pan" WheelMode="Zoom">
+                <Image Source="{Binding ImageSource0}"/>
+            </zb:ZoomBoxPanel>
+            <zb:ZoomBoxPanel Margin="2,2,2,2" ZoomMode="FitPage" x:Name="zoomBox1" Grid.Row="1" Grid.Column="2" MinZoom="0.01" MaxZoom="10000" MouseMode="Pan" WheelMode="Zoom">
+                <Image Source="{Binding ImageSource1}"/>
+            </zb:ZoomBoxPanel>
+            <Image Grid.Row="1" Grid.Column="2" HorizontalAlignment="Center" Margin="2,2,2,2" Source="{Binding NextImageSource}" VerticalAlignment="Center" Visibility="Hidden"/>
+
+            <Label Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center">
+                <TextBlock Text="{Binding ImageInfo0}"/>
+            </Label>
+            <Label Grid.Row="2" Grid.Column="2" HorizontalAlignment="Left"  VerticalAlignment="Center">
+                <TextBlock Text="{Binding ImageInfo1}"/>
+            </Label>
+        </Grid>
+
+        <Grid Grid.Row="1">
+            <ProgressBar Grid.Row="0" HorizontalAlignment="Stretch" Value="{Binding Progress}" Style="{DynamicResource ProgressBarStyle}" Foreground="{DynamicResource ProgressBarForeground}" Background="{DynamicResource ProgressBarBackground}" >
+                <i:Interaction.Behaviors>
+                    <Behaviors:LinearGradientBrushBehavior />
+                </i:Interaction.Behaviors>
+            </ProgressBar>
+        </Grid>
+
     </Grid>
 </Window>
