--- a/PhotoPicker/HelpWindow.xaml
+++ b/PhotoPicker/HelpWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="HelpWindow" Height="750" Width="600"
         FontFamily="Microsoft YaHei"
+        WindowStartupLocation="CenterOwner"
         Icon="Resource/help.png">
     <Grid>
         <Grid.RowDefinitions>
